--- a/client/src/components/Cart/style.css
+++ b/client/src/components/Cart/style.css
@@ -33,11 +33,11 @@
 
 .cart-closed {
   position: fixed;
-  top: 2%;
+  top: 10%;
   right: 1%;
   font-size: 2rem;
   cursor: pointer;
-  background-color: var(--blue);
+  background-color: transparent;
   border-radius: 50%;
   padding: .25rem;
   width: 50px;
