--- a/client/src/index.css
+++ b/client/src/index.css
@@ -82,6 +82,7 @@ h3 {
 
 h4 {
   font-size: 1.5rem;
+  color: var(--darkbrown)
 }
 
 h5 {
@@ -380,6 +381,11 @@ background-color: transparent;
   box-shadow: 0px 8px 0px 0px var(darkbrown);
   background-color: var(--brown);
   color:var(--nav);
+   /* position:fixed; */
+  left:0;
+  bottom:0;
+  right:0; 
+  
 }
 
 @media screen and (max-width: 768px) {
@@ -394,6 +400,11 @@ background-color: transparent;
     box-shadow: 0px 8px 0px 0px var(darkbrown);
     background-color: var(--brown);
     color:var(--nav);
+    /* position:fixed; */
+    left:0;
+    bottom:0;
+    right:0;
+
   }
 
  
