--- a/client/src/components/Cart/style.css
+++ b/client/src/components/Cart/style.css
@@ -59,7 +59,7 @@
   margin: 0 .5rem 1rem 0;
 }
 
-@media screen and (max-width: 768px) {
+/* @media screen and (max-width: 768px) {
   .cart {
     position: relative;
     max-width: 100%;
@@ -73,4 +73,4 @@
     margin: 0 auto;
     margin-bottom: 0.8rem;
   }
-}
+} */
