--- a/client/src/index.css
+++ b/client/src/index.css
@@ -109,7 +109,7 @@ a:hover {
 }
 
 header {
-  background-color: var(--me);
+  background-color: var(--nav);
   /* box-shadow: 0px 0px 8px 0px var(--brown); */
   position:relative
 }
@@ -231,7 +231,7 @@ input:focus {
   color: var(--darkbrown);
   list-style: none;
   font-family: 'Rock Salt', cursive;
-background-color: transparent;
+/* background-color: transparent; */
 } 
 
 .dropdown-menu {
