--- a/client/src/index.css
+++ b/client/src/index.css
@@ -270,8 +270,7 @@ input:focus {
   color: var(--darkbrown);
   color: var(--darkbrown);
   font-size: large;
-  background-color:var(--me); 
-  border-radius: 2rem;
+
 }
 
 .container {
@@ -354,6 +353,11 @@ input:focus {
 .py-2 {
   padding-top: var(--spacing-two);
   padding-bottom: var(--spacing-two);
+}
+
+.py-3 {
+  padding-top: var(--spacing-three);
+  padding-bottom: var(--spacing-three);
 }
 
 .card {
