--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,13 +12,13 @@
   --brown:#4d332d;
   --lightbrown:#7b5e57;
   --me:hsl(12, 29%, 66%);
-  --darkbrown:#260e04;
+  --darkbrown:rgb(38, 14, 4);
   --light:#fff1b7ea;
   --yellow:#e6c240;
   --lemon:rgb(248, 218, 48);
   --offwhite:#e6fdffea;
   --greenWash:rgba(66,151, 130, 0.75);
-  --nav:hsla(12, 29%, 66%, 0.749);
+  --nav:rgba(193, 153, 143, 0.749);
   --submit:  linear-gradient(to
   bottom, 
   rgba(248, 218, 48, 0.445) 0%, 
@@ -383,6 +383,37 @@ input:focus {
   padding-bottom: var(--spaceing-four);
 }
 
+.float-left {
+  margin-right:50%;
+  margin-top: calc(3rem);
+  overflow-x: hidden;
+  height:60%;
+  width: 60%;
+}
+
+.float-right {
+  margin-left:80%;
+  margin-top: calc(3rem);
+  overflow-x: hidden;
+  height:50rem;
+    position:absolute;
+    text-align: right;
+    color: var(--lightbrown);
+}
+
+.start {
+  position: relative;
+  text-align: center;
+  color: var(--lightbrown);
+  font-family: 'Rock Salt', cursive;
+}
+
+.top-cen {
+  position:absolute;
+  top: calc(1.5rem);
+  left:30%;
+  font-family: 'Rock Salt', cursive;
+}
 .card {
   width: 25%;
   text-align: center;
