--- a/client/src/index.css
+++ b/client/src/index.css
@@ -119,13 +119,22 @@ a:hover {
 
 header {
   background-color: var(--nav);
-  /* box-shadow: 0px 0px 8px 0px var(--brown); */
+
+  position:relative;
+  background-color:transparent;
+  
+}
+
+.manmiya {
+  background-color: var(--nav);
+
   position:relative;
   box-shadow: rgba(38, 14, 4, 0.4) 0px 5px, 
   rgba(77, 51, 45, 0.3) 0px 10px, 
   rgba(123,94,87, 0.2) 0px 15px, 
   rgba(188,96,57, 0.1) 0px 20px, 
   rgba(217, 143,69, 0.05) 0px 25px;
+  border-radius: 2rem;
 }
 
 header a {
@@ -417,13 +426,13 @@ hr {
 
 .float-right a {
   color: var(--darkbrown);
+  font-family: 'Rock Salt', cursive;
 }
 
 .start {
   position: relative;
   text-align: center;
   color: var(--lightbrown);
-  font-family: 'Rock Salt', cursive;
 }
 
 .top-cen {
