--- a/client/src/index.css
+++ b/client/src/index.css
@@ -126,7 +126,7 @@ header {
 }
 
 .manmiya {
-  background-color: var(--nav);
+  background-color: var(--me);
 
   position:relative;
   box-shadow: rgba(38, 14, 4, 0.4) 0px 5px, 
@@ -407,18 +407,38 @@ input:focus {
   box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
 }
 
+.float-leftt {
+  margin-right:60%;
+  margin-top: calc(1rem);
+  overflow-x: hidden;
+  height:60%;
+  width: 40%;
+  box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
+  border-radius: 20rem;
+}
+
 .float-right {
   margin-left:70%;
   margin-top: calc(3rem);
   overflow-x: hidden;
-  /* height:50rem; */
     position:absolute;
     text-align: right;
     color: var(--lightbrown);
     margin-right: 6.5%;
     border-left: 1px solid line var(darkbrown);
     text-align: start;
-    /* background-color: var(--me); */
+}
+
+.float-rightt {
+  margin-left:33%;
+  margin-top: calc(3rem);
+  overflow-x: hidden;
+    position:absolute;
+    text-align: right;
+    color: var(--darkbrown);
+    margin-right: 6.5%;
+    border-left: 1px solid line var(darkbrown);
+    text-align: start;
 }
 
 hr {
@@ -437,12 +457,6 @@ hr {
   color: var(--lightbrown);
 }
 
-.top-cen {
-  /* position:absolute;
-  
-  left:30%; */
-  /* font-family: 'Rock Salt', cursive; */
-}
 .card {
   width: 25%;
   text-align: center;
@@ -460,6 +474,7 @@ hr {
   rgba(0, 0, 0, 0.12) 0px 4px 6px, 
   rgba(0, 0, 0, 0.17) 0px 12px 13px,
   rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  border-radius: 1rem;
 }
 
 .cat {
