--- a/client/src/index.css
+++ b/client/src/index.css
@@ -107,9 +107,9 @@ p {
 }
 
 a {
-  color: var(--pink);
+  color: var(--sand);
   text-decoration: none;
-  font-weight: bold;
+  font-weight: bolder;
 }
 
 a:hover {
@@ -127,7 +127,6 @@ header {
 
 .manmiya {
   background-color: var(--me);
-
   position:relative;
   box-shadow: rgba(38, 14, 4, 0.4) 0px 5px, 
   rgba(77, 51, 45, 0.3) 0px 10px, 
@@ -135,6 +134,7 @@ header {
   rgba(188,96,57, 0.1) 0px 20px, 
   rgba(217, 143,69, 0.05) 0px 25px;
   border-radius: 2rem;
+  box-shadow: inset 0.5em 0.5em  var(--purple);
 }
 
 header a {
@@ -165,8 +165,6 @@ header a:hover {
   margin-right: auto;
   font-size: small;
 }
-
-
 
 nav button {
   right: 1%;
@@ -208,7 +206,6 @@ button:hover {
   outline: none;
   cursor: pointer;
   margin: 0 1px;
-  background-color: var(--secondary);
   background-color: rgb(123, 94, 87, 0.9);
   border-radius: 2rem;
   box-shadow: 0px 0px 8px 0px var(--me);
@@ -289,7 +286,6 @@ input:focus {
   color: var(darkbrown);
   text-align: center;
   justify-content: center;
-  /* width: 55%; */
   margin-left: auto;
   margin-right: auto;
 }
@@ -300,7 +296,7 @@ input:focus {
   color: var(--darkbrown);
   color: var(--darkbrown);
   font-size: large;
-
+  box-shadow: inset -3em -1em rgb(188,96,57);
 }
 
 .container {
@@ -418,7 +414,7 @@ input:focus {
 }
 
 .float-right {
-  margin-left:70%;
+  margin-left:60%;
   margin-top: calc(3rem);
   overflow-x: hidden;
     position:absolute;
@@ -427,6 +423,7 @@ input:focus {
     margin-right: 6.5%;
     border-left: 1px solid line var(darkbrown);
     text-align: start;
+    box-shadow: inset 3em 1em var(--orch);
 }
 
 .float-rightt {
@@ -439,10 +436,11 @@ input:focus {
     margin-right: 6.5%;
     border-left: 1px solid line var(darkbrown);
     text-align: start;
+   
 }
 
 hr {
-  style: border-solid thin dotted var(--darkbrown);
+  border : 1px thin dotted var(--darkbrown);
   color: var(--darkbrown);
 }
 
@@ -454,7 +452,7 @@ hr {
 .start {
   position: relative;
   text-align: center;
-  color: var(--lightbrown);
+  color: var(--brown);
 }
 
 .card {
