--- a/client/src/index.css
+++ b/client/src/index.css
@@ -134,7 +134,7 @@ header {
   rgba(188,96,57, 0.1) 0px 20px, 
   rgba(217, 143,69, 0.05) 0px 25px;
   border-radius: 2rem;
-  box-shadow: inset 0.5em 0.5em  var(--purple);
+  box-shadow: inset 0.5em 0.5em  var(--orch);
 }
 
 header a {
@@ -296,7 +296,7 @@ input:focus {
   color: var(--darkbrown);
   color: var(--darkbrown);
   font-size: large;
-  box-shadow: inset -3em -1em rgb(188,96,57);
+  /* box-shadow: inset -3em -1em rgb(188,96,57); */
 }
 
 .container {
@@ -423,7 +423,7 @@ input:focus {
     margin-right: 6.5%;
     border-left: 1px solid line var(darkbrown);
     text-align: start;
-    box-shadow: inset 3em 1em var(--orch);
+    box-shadow: inset 2em 1em var(--sand);
 }
 
 .float-rightt {
