--- a/client/src/index.css
+++ b/client/src/index.css
@@ -134,7 +134,7 @@ header {
   rgba(188,96,57, 0.1) 0px 20px, 
   rgba(217, 143,69, 0.05) 0px 25px;
   border-radius: 2rem;
-  box-shadow: inset 0.5em 0.5em  var(--orch);
+  box-shadow: inset 0.5em 0.5em  var(--orch), 10px 5px 5px var(--sand);
 }
 
 header a {
@@ -414,7 +414,7 @@ input:focus {
 }
 
 .float-right {
-  margin-left:50%;
+  margin-left:55%;
   margin-top: calc(3rem);
   overflow-x: hidden;
     position:absolute;
@@ -423,12 +423,12 @@ input:focus {
     margin-right: 6.5%;
     border-left: 1px solid line var(darkbrown);
     text-align: start;
-    box-shadow: inset 2em 1em var(--sand);
+    box-shadow: inset 2em 1em var(--sand), 10px 5px 5px var(--orch);
     border-radius: 1rem;
 }
 
 .float-rightt {
-  margin-left:33%;
+  margin-left:35%;
   margin-top: calc(3rem);
   overflow-x: hidden;
     position:absolute;
@@ -455,7 +455,7 @@ hr {
   position: relative;
   text-align: center;
   color: var(--brown);
-  box-shadow: inset 2em -1em  var(--purple);
+  box-shadow: inset 2em  -1em var(--sand), 10px 5px 5px var(--orch)  ;
   border-radius: 2rem;
 }
 
