--- a/client/src/index.css
+++ b/client/src/index.css
@@ -62,16 +62,14 @@ body {
   
 }
 
-.bedford {
 
-}
 
 .crown {
   width: 100px;
   height: 100px;
   position: absolute;
   top:-80%; 
-  left:%; 
+  left:18.5rem; 
 
 }
 
