--- a/client/src/index.css
+++ b/client/src/index.css
@@ -552,8 +552,8 @@ hr {
   
 
   .float-right {
-    /* margin-right:35%; */
-    width:auto;
+    margin-left: 13rem;
+    /* width:auto; */
   }
 
   .footer {
