--- a/client/src/index.css
+++ b/client/src/index.css
@@ -583,6 +583,14 @@ hr {
     margin-left: 13rem;
     
   }
+/* About main photo */
+  .right {
+    margin-left:50%;
+   overflow-x: hidden;
+   box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
+   margin-top: calc(3rem);
+   /* height:10%; */
+  }
 
   /* Photo for ArtBio age */
 .float-leftt {
