--- a/client/src/index.css
+++ b/client/src/index.css
@@ -238,6 +238,21 @@ button[disabled] {
 
 img {
   max-width: 100%;
+
+}
+
+.im {
+  max-width: 100%;
+  border-right: 1px solid white;
+  padding:5%;
+  border-top: 1px solid white;
+}
+
+.em {
+  max-width: 100%;
+  border-left: 1px solid var(--sand);
+  padding:5%;
+  border-bottom: 1px solid var(--sand);
 }
 
 span[role="img"] {
