--- a/client/src/index.css
+++ b/client/src/index.css
@@ -247,7 +247,11 @@ img {
   padding:5%;
   border-top: 1px solid white;
 }
-
+.imm {
+  max-width: 100%;
+  padding:5%;
+  border: 1px solid white;
+}
 .em {
   max-width: 100%;
   border-left: 1px solid var(--sand);
