--- a/client/src/index.css
+++ b/client/src/index.css
@@ -600,7 +600,10 @@ hr {
 @media screen and (max-width: 768px) {
   /* main cover page */
 .cover {
-  height: 100%;
+  /* height: 1334px; */
+  background-image: linear-gradient(to bottom,
+  var(--me),
+  var(--lightbrown));
 }
 
   .card {
