--- a/client/src/index.css
+++ b/client/src/index.css
@@ -59,7 +59,7 @@ body {
 }
 
 .cover {
-
+  background-image: linear-gradient(to bottom, #c1998f, #bd9489, #ba8e83, #b6897e, #b28478);
 }
 
 .crown {
@@ -598,6 +598,7 @@ hr {
 .cover {
   height: max-content;
   background-image: linear-gradient(to bottom, #c1998f, #bd9489, #ba8e83, #b6897e, #b28478);
+  background-image: linear-gradient(to bottom, #c1998f, #bf978d, #bc958b, #ba938a, #b89188, #bc8d85, #bf8882, #c28381, #cb7983, #d16f8a, #d46696, #d25ea6);
 }
 
   .card {
