--- a/client/src/index.css
+++ b/client/src/index.css
@@ -30,6 +30,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rock+Salt&family=Source+Serif+4&display=swap');
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Rock+Salt&family=Source+Serif+4&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&family=Rock+Salt&family=Source+Serif+4&display=swap');
 
 * {
   box-sizing: border-box;
@@ -49,7 +51,8 @@ body {
   font-size: 16px;
   color: var(--dark);
   background-color: var(--me);
-  font-family: 'Source Serif 4', sans-serif;
+  font-family: 'Montserrat';
+  font-family: Montserrat;
 }
 .logo{
   border-radius: 0.5rem;
@@ -528,6 +531,7 @@ hr {
 .float-right a {
   color: var(--darkbrown);
   /* font-family: 'Rock Salt', cursive; */
+  /* font-family: 'Montserrat'; */
 }
 
 .start {
